--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -51,13 +51,14 @@ body{
 .register{
     
     display: flex;
-    gap:10px;
+    gap:1px;
     box-shadow: rgba(255, 255, 255, 0.19) 1px 1px 20px 10px, rgba(255, 255, 255, 0.23) 0px 6px 6px;
     flex-direction: column;
     border-radius: 10px;
     height: 650px;
+
     min-width:50vw;
-    background-color: rgba(0, 0, 0, 0.016);
+    background-color: rgb(255, 255, 255);
     position: absolute;
     top:50%;
     left:50%;
@@ -72,7 +73,7 @@ body{
     
     border-radius: 10px;
     color: white;
-
+    border: 3px solid white;
     display: flex;
     justify-content:center;
     align-items:center;
@@ -92,7 +93,7 @@ body{
     
     display: flex;
     flex-direction: column;
-    
+    border: 3px solid white;
     gap:15px;
     padding: 20px 20px;
     background-color: #000000;
