--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'Mona Sans';
-    src:url(../font/Mona-Sans.ttf) format('woff2');
+    src:url(../font/Mona-Sans.ttf) format('woff2');;
   }
 
 *{
@@ -44,7 +44,7 @@ body{
     
     height:100vh;
     width:100%;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(255, 255, 255);
     position: relative;
     
 }
@@ -52,7 +52,7 @@ body{
     
     display: flex;
     gap:1px;
-    box-shadow: rgba(255, 255, 255, 0.19) 1px 1px 20px 10px, rgba(255, 255, 255, 0.23) 0px 6px 6px;
+    
     flex-direction: column;
     border-radius: 10px;
     height: 650px;
@@ -112,6 +112,16 @@ body{
     font-size: large;
     color:white;
 }
+.nothaveaccount{
+    text-decoration: none;
+    font-size:medium;
+    color: rgb(45, 105, 183);
+    font-family: "Mona Sans SemiBold";
+}
+.nothaveaccount:hover{
+    text-decoration: underline;
+}
+
 
 button{
    
