--- a/stylesheets/register.css
+++ b/stylesheets/register.css
@@ -39,7 +39,7 @@ body{
     
     height:100vh;
     width:100%;
-    background-color: rgb(255, 255, 255);
+    background-color: rgb(27, 26, 26);
     position: relative;
     
 }
@@ -111,7 +111,7 @@ body{
     text-decoration: none;
     font-size:medium;
     color: rgb(45, 105, 183);
-    font-family: "Mona Sans SemiBold";
+    font-family: "Noto Sans";
 }
 .nothaveaccount:hover{
     text-decoration: underline;
@@ -119,7 +119,7 @@ body{
 
 
 button{
-   
+    cursor: pointer;
     padding:15px 25px;
     background-color: rgb(255, 102, 6);
     color: rgb(255, 255, 255);
