--- a/public/stylesheets/register.css
+++ b/public/stylesheets/register.css
@@ -47,10 +47,9 @@ body{
     
     display: flex;
     gap:1px;
-    
     flex-direction: column;
     border-radius: 10px;
-    height: 650px;
+    height: 570px;
 
     min-width:50vw;
     background-color: rgb(255, 255, 255);
@@ -62,7 +61,7 @@ body{
 }
 .logodiv{
     padding:20px 20px;
-    height:100%;
+    height:230px;
    
     background-color: rgb(0, 0, 0);
     
@@ -85,19 +84,22 @@ body{
     width: 1.5cm;
 }
 .registerform{
-    
     display: flex;
     flex-direction: column;
+    justify-content: space-between;
     border: 3px solid white;
-    gap:15px;
+    
     padding: 20px 20px;
     background-color: #000000;
     border-radius: 10px;
     height:100%;
-    
-    
 }
-.registerform>input{
+.firstContainer{
+    gap:15px;
+    display: flex;
+    flex-direction: column;
+}
+.firstContainer>input{
     height:1.3cm;
     width:100%;
     border: 1px solid white;
@@ -125,9 +127,8 @@ button{
     color: rgb(255, 255, 255);
     border-radius: 10px;
     font-size: larger;
-    margin-top: 30px;
     font-family: "Noto Sans";
-    
+    width: 100%;
     
 }
 
