--- a/views/register.ejs
+++ b/views/register.ejs
@@ -26,16 +26,16 @@
                     alt="logo"><span>p</span><span>e</span><span>n</span><span>T</span><span>a</span><span>l</span><span>k</span>
             </div>
 
-            <form class="registerform" action="/register" method="post">
+            <form class="registerform" action="/registerPage" method="post">
                 <div class="firstContainer">
                     <p class="seemore">Make Account to see More!</p>
-                    <input type="text" name="Username" placeholder="Username" autocomplete="off" required />
+                    <input type="text" name="username" placeholder="Username" autocomplete="off" required />
                     <input type="text" name="fullname" placeholder="Full Name" autocomplete="off" required />
                     <input type="password" name="password" placeholder="Password" autocomplete="off" required />
                     <a class="nothaveaccount" href="./loginPage">Already have an account?</a>
                 </div>
                 <div class="secondContainer">
-                    <button>Register</button>
+                    <button type="submit">Register</button>
                 </div>
             </form>
 
