--- a/views/login.ejs
+++ b/views/login.ejs
@@ -32,7 +32,7 @@
                     <p class="seemore">Login to your Account</p>
                     <input type="text" name="email" placeholder="Username" required />
                     <input type="password" name="password" placeholder="Password" required />
-                    <a class="nothaveaccount" href="./registerPage">Don't have an account?</a>
+                    <a class="nothaveaccount" href="./register">Don't have an account?</a>
                 </div>
                 <div class="secondContainer">
                     <button>Sign in</button>
