--- a/views/start.ejs
+++ b/views/start.ejs
@@ -32,7 +32,7 @@
 <script>
     setTimeout(function () {
        // after 5 seconds
-       window.location = "/registerPage";
+       window.location = "/register";
     }, 5000)
   </script>
 </body>
