--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,15 +27,15 @@
                     alt="logo"><span>p</span><span>e</span><span>n</span><span>T</span><span>a</span><span>l</span><span>k</span>
             </div>
 
-            <form class="registerform" action="/login" method="post">
+            <form class="registerform" action="/loginPage" method="post">
                 <div class="firstContainer">
                     <p class="seemore">Login to your Account</p>
-                    <input type="text" name="email" placeholder="Username" required />
+                    <input type="text" name="username" placeholder="Username" required />
                     <input type="password" name="password" placeholder="Password" required />
                     <a class="nothaveaccount" href="./registerPage">Don't have an account?</a>
                 </div>
                 <div class="secondContainer">
-                    <button>Sign in</button>
+                    <button type="submit">Sign in</button>
                 </div>
             </form>
 
