--- a/views/login.ejs
+++ b/views/login.ejs
@@ -27,7 +27,7 @@
                     alt="logo"><span>p</span><span>e</span><span>n</span><span>T</span><span>a</span><span>l</span><span>k</span>
             </div>
 
-            <form class="registerform" action="/loginPage" method="post">
+            <form class="registerform" action="/login" method="post">
                 <div class="firstContainer">
                     <p class="seemore">Login to your Account</p>
                     <input type="text" name="username" placeholder="Username" required />
