--- a/views/login.ejs
+++ b/views/login.ejs
@@ -30,7 +30,7 @@
             <form class="registerform" action="/login" method="post">
                 <div class="firstContainer">
                     <p class="seemore">Login to your Account</p>
-                    <% if(error.length > 0){ %>
+                    <% if(locals.error.length > 0){ %>
                         <p class="error"><%= error %></p>
                       <% } %>
                     <input type="text" name="username" placeholder="Username" required />
