--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,9 +29,9 @@
             <form class="registerform" action="/register" method="post">
                 <div class="firstContainer">
                     <p class="seemore">Make Account to see More!</p>
-                    <input type="text" name="username" placeholder="Username" autocomplete="off" required />
-                    <input type="text" name="fullname" placeholder="Full Name" autocomplete="off" required />
-                    <input type="password" name="password" placeholder="Password" autocomplete="off" required />
+                    <input type="text" name="username" placeholder="Username" autocomplete="off" maxlength="25" pattern="^\S+$" title="Please enter username without spaces." required />
+                    <input type="text" name="fullname" placeholder="Full Name" autocomplete="off" maxlength="25" required />
+                    <input type="password" name="password" placeholder="Password" autocomplete="off" maxlength="15" pattern="^\S+$" title="Please enter password without spaces." required />
                     <a class="nothaveaccount" href="./login">Already have an account?</a>
                 </div>
                 <div class="secondContainer">
