--- a/views/register.ejs
+++ b/views/register.ejs
@@ -29,6 +29,9 @@
             <form class="registerform" action="/register" method="post">
                 <div class="firstContainer">
                     <p class="seemore">Make Account to see More!</p>
+                    <% if(existsError.length > 0){ %>
+                        <p class="error"><%= existsError %></p>
+                      <% } %>
                     <input type="text" name="username" placeholder="Username" autocomplete="off" maxlength="25" pattern="^\S+$" title="Please enter username without spaces." required />
                     <input type="text" name="fullname" placeholder="Full Name" autocomplete="off" maxlength="25" required />
                     <input type="password" name="password" placeholder="Password" autocomplete="off" maxlength="15" pattern="^\S+$" title="Please enter password without spaces." required />
