--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,7 +24,7 @@
                         <i class="ri-user-search-line"></i>
                     </div>
 
-                    <a href=""><i class="ri-add-line"></i></a>
+                    <a href=""><i class="ri-search-line"></i></a>
                 </div>
                 <div class="friendlistbox">
                     <p>FRIENDLIST</p>
@@ -64,11 +64,25 @@
             </div>
         </div>
         <div class="seconddiv">
-            <form id="form" action="">
+            <div class="thirdinnerdiv">
+                <div class="selecteduser">
+                    <div class="selecteduserprofile"></div>
+                    <div class="selecteduserdetails">
+                        <h4>Jose Mouringho</h4>
+                        <p>Lorem ipsum dolor, sit amet consectetur </p>
+                    </div>
+
+                </div>
+                <a class="menu" href="#"><i class="ri-menu-line"></i></a>
+
+            </div>
+            <div class="fourthinnerdiv"></div>
+            
+            <!-- <form id="form" action="">
                 <input id="input" autocomplete="off" /><button>Send</button>
               </form>
 
-              <ul id="messages"></ul>  <!--the messages appear here-->
+              <ul id="messages"></ul>  the messages appear here -->
         </div>
     </div>
 </body>
