--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -16,7 +16,7 @@ body{
     height:100%;
     background-color:#E2E4E9;
     display: flex;
-    gap:10px;
+    gap:5px;
 }
 
 .firstdiv{
@@ -65,7 +65,8 @@ body{
     
 }
 .chatbox{
-    padding:20px;
+    padding:0px 10px;
+    height:80px;
     width:100%;
     
     background-color: rgb(255, 255, 255);
@@ -119,7 +120,7 @@ body{
     background-color: orangered;
 }
 .chatbox>a>i{
-    font-size:30px;
+    font-size:24px;
     
 }
 .friendlistbox{
@@ -142,8 +143,7 @@ body{
     
 }
 .user1{
-    width:100%;
-    
+    width:100%; 
     background-color: rgb(255, 255, 255);
     border-bottom: 1px solid grey;
     padding:10px 10px;
@@ -164,8 +164,8 @@ body{
     gap:15px;
 }
 .profile{
-    height:70px;
-    width:70px;
+    height:60px;
+    width:60px;
     border-radius: 50%;
     background-image: url(profile.png);
     background-position: center;
@@ -187,8 +187,56 @@ body{
 /* //////////////////////////////////// */
 .seconddiv{
     height:100%;
+    width:100%;
+    display: flex;
+    gap:5px;
+    flex-direction: column;
     width:60%;
     border-radius: 10px;
-    background-color: rgb(31, 36, 36);
+    background-color: rgba(31, 36, 36, 0);
     
+}
+.thirdinnerdiv{
+    padding:0px 20px;
+    width:100%;
+    height:80px;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    color:rgb(0, 0, 0);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+.selecteduser{
+    
+    height:100%;
+    background-color: rgba(127, 255, 212, 0);
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    
+}
+.selecteduserprofile{
+    width:55px;
+    height:55px;
+    background-color: blue;
+    border-radius: 50%;
+}
+.selecteduserdetails>p{
+    font-size: 12px;
+}
+.menu{
+    text-decoration: none;
+    color: #000000;
+    font-size:24px;
+    /* width:30px;
+    height:30px;
+    align-items: center; */
+}
+.fourthinnerdiv{
+    width:100%;
+    height:100%;
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    padding:20px ;
 }
