--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
-    <link rel="stylesheet" href="./stylesheets/home.css">
+    <link rel="stylesheet" href="/stylesheets/home.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 
@@ -13,7 +13,7 @@
     <div class="maindiv">
         <div class="firstdiv">
             <div class="firstinnerdiv">
-                <img src="./images/OpenTalkLogo.png" alt="logo">
+                <img src="/images/OpenTalkLogo.png" alt="logo">
                 <a href="/logout"><i class="ri-logout-box-line"></i></a>
             </div>
             <div class="secondinnerdiv">
@@ -73,6 +73,6 @@
     </div>
 </body>
 <script src="/socket.io/socket.io.js"></script>
-<script src="./javascripts/socket.js"></script>
+<script src="/javascripts/socket.js"></script>
 
 </html>
