--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,7 +20,7 @@
                 <div class="chatbox">
                     <h1>Chat</h1>
                     <div class="search">
-                        <input type="text" placeholder="Search">
+                        <input type="text" placeholder="Search user">
                         <i class="ri-user-search-line"></i>
                     </div>
 
@@ -76,13 +76,29 @@
                 <a class="menu" href="#"><i class="ri-menu-line"></i></a>
 
             </div>
-            <div class="fourthinnerdiv"></div>
-            
-            <!-- <form id="form" action="">
-                <input id="input" autocomplete="off" /><button>Send</button>
-              </form>
+            <div class="fourthinnerdiv">
+                <div class="messagediv">
+                    <div class="mymessage">
+                        <span>Hii guys</span>
+                    </div>
+                    <div class="othermessage">
+                        <span>Hlo</span>
+                    </div>
 
-              <ul id="messages"></ul>  the messages appear here -->
+                </div>
+                
+                    <form id="form" action="">
+                        <input id="input" autocomplete="off" placeholder="Enter your Message"/>
+                        <button type="submit"><i class="ri-arrow-right-up-line"></i></button>
+                    </form>
+               
+               
+
+            </div>
+            
+            
+
+              <!-- <ul id="messages"></ul>  the messages appear here -->
         </div>
     </div>
 </body>
