--- a/public/stylesheets/home.css
+++ b/public/stylesheets/home.css
@@ -94,11 +94,12 @@ body{
     width:100%;
     border-radius: 40px;
     border: none;
-    padding:0px 30px;
+    padding:0px 25px;
+    color: #000000;
     font-size: larger;
     background-color: transparent;
     border:2px solid grey;
-    color: #000000;
+    
     
 }
 .search>i{
@@ -238,4 +239,78 @@ body{
     background-color: rgb(255, 255, 255);
     border-radius: 10px;
     padding:20px ;
+    display: flex;
+    gap:10px;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+
+#form{
+    width:100%;
+    height:40px;
+    background-color:#E1E3E8;
+    display: flex;
+    justify-content:space-between;
+    border-radius: 20px;
+    align-items: center;
+}
+#form>input{
+    width:90%;
+    height:40px;
+    background-color: transparent;
+    border:2px solid grey;
+    border-radius: 20px;
+    padding:0px 25px;
+    color: #000000;
+}
+#form>button{
+    width:40px;
+    height:40px;
+    font-size: 24px;
+    border-radius: 50%;
+    border:none;
+    color: white;
+    background-color: #FF4500;
+}
+/* #messages{
+    color:white;
+    background-color: #FF4500;
+    display: inline-block;
+    font-size: larger;
+    padding:5px 14px;
+    border-radius: 20px;
+    border-top-left-radius: 0px;
+    text-decoration: none;
+    list-style: none;
+} */
+
+.messagediv{
+    padding:10px 10px;
+    width:100%;
+    display: flex;
+    flex-direction: column;
+    height:470px;
+    overflow: auto;
+    background-color:#E1E3E8;
+    border-radius: 10px;
+    gap:2px;
+}
+.mymessage>span{
+    padding:4px 10px;
+    background-color: #FF4500;
+    display: inline-block;
+    border-radius: 20px;
+    border-top-left-radius:0px;
+    color:white;
+    font-size: 20px;
+}
+.othermessage>span{
+    padding:4px 10px;
+    background-color: #FF4500;
+    display: inline-block;
+    border-radius: 20px;
+    border-top-left-radius:0px;
+    color:white;
+    font-size: 20px;
 }
