--- a/views/home.ejs
+++ b/views/home.ejs
@@ -85,13 +85,14 @@
 
             </div>
             <div class="fourthinnerdiv">
-                <div class="messagediv">
-                    <div class="mymessage">
+                <div id="messagediv">
+                    
+                    <!-- <div class="mymessage">
                         <span>Hii guys</span>
                     </div>
                     <div class="othermessage">
-                        <span>Hlo</span>
-                    </div>
+                        <span>Hlo guys how are you?</span>
+                    </div> -->
 
                 </div>
                 
