--- a/public/stylesheets/logout.css
+++ b/public/stylesheets/logout.css
@@ -18,7 +18,8 @@
     display: block;
 }
 .blur{
-    filter: blur(3px);
+    filter: blur(3px);;
+    user-select: none;
 }
 .logoutContainer h1{
     margin-top: 40px;
