--- a/public/stylesheets/logout.css
+++ b/public/stylesheets/logout.css
@@ -1,16 +1,17 @@
 .logoutContainer{
     display: none;
-    background-color: black;
-    color: aliceblue;
+    background-color: rgb(255, 255, 255);
+    color: rgb(0, 0, 0);
     position: fixed;
-    height: 200px;
+    height: 230px;
     width: 350px;
     z-index: 1;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     text-align: center;
-    top: 50%;
+    top: 40%;
     left: 50%;
-    transform: translate(-50%,-50%);
-    border-radius: 10px;
+    transform: translate(-50%,-45%);
+    border-radius: 7px;
     overflow: hidden;
     font-family: "Noto Sans";
 }
@@ -18,33 +19,33 @@
     display: block;
 }
 .blur{
-    filter: blur(3px);;
-    user-select: none;
+    filter: blur(8px);;
+    
 }
 .logoutContainer h1{
     margin-top: 40px;
 }
 .logoutContainer p{
-    font-size: large;
+    font-size:medium;
     margin-top: 10px;
 }
 
 .logoutButtonContainer{
-    position: absolute;
-    bottom: 0px;
-    height: 40px;
-    overflow: hidden;
-    gap: 0px;
+    width:100%;
+    height:60px;
+    margin-top: 40px;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
 }
 .logoutButtonContainer button{
     height: 40px;
-    width: 175px;
+    width: 140px;
+    cursor: pointer;
+    font-size: large;
+    border-radius: 7px;
     background-color:rgb(255, 102, 6);
     border: none;
-}
-.logoutButtonContainer .button1{
-    border-right: 2px solid black;
-}
-.logoutButtonContainer .button2{
-    border-left: 2px solid black;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 2px 5px -1px, rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
+    color: white;
 }
