--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,10 +12,10 @@
 
 <body>
     <div class="logoutContainer">
-        <h1>Log out</h1>
+        <h1>Log out <i class="ri-logout-box-r-line"></i></h1>
         <p>Are you sure you want to log out ?</p>
         <div class="logoutButtonContainer">
-            <button class="button1">OK</button><button class="button2">Cancel</button>
+            <button class="button1">OK</button><button class="button2">CANCEL</button>
         </div>
     </div>
     <div class="maindiv">
