--- a/public/stylesheets/logout.css
+++ b/public/stylesheets/logout.css
@@ -18,8 +18,7 @@
     display: block;
 }
 .blur{
-    filter: blur(3px);;
-    user-select: none;
+    filter: blur(3px);
 }
 .logoutContainer h1{
     margin-top: 40px;
