--- a/views/home.ejs
+++ b/views/home.ejs
@@ -97,12 +97,9 @@
                 </div>
                 
                     <form id="form" action="">
-                        <input id="input" autocomplete="off" placeholder="Enter your Message"/>
+                        <textarea id="input"  placeholder="Enter your Message"></textarea>
                         <button type="submit"><i class="ri-arrow-right-up-line"></i></button>
                     </form>
-               
-               
-
             </div>
             
             
