--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
+    <link rel="icon" href="./images/OpenTalkLogo.png">
     <link rel="stylesheet" href="/stylesheets/home.css">
     <link rel="stylesheet" href="/stylesheets/logout.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
@@ -86,14 +87,6 @@
             </div>
             <div class="fourthinnerdiv">
                 <div id="messagediv">
-                    
-                    <!-- <div class="mymessage">
-                        <span>Hii guys</span>
-                    </div>
-                    <div class="othermessage">
-                        <span>Hlo guys how are you?</span>
-                    </div> -->
-
                 </div>
                 
                     <form id="form" action="">
@@ -102,9 +95,6 @@
                     </form>
             </div>
             
-            
-
-              <!-- <ul id="messages"></ul>  the messages appear here -->
         </div>
     </div>
 </body>
