--- a/views/register.ejs
+++ b/views/register.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>OpenTalk</title>
 
-    <link rel="icon" href="./images/OpenTalkLogo.png">
-    <link rel="stylesheet" href="./stylesheets/register.css">
+    <link rel="icon" href="/images/OpenTalkLogo.png">
+    <link rel="stylesheet" href="/stylesheets/register.css">
 
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
