--- a/views/home.ejs
+++ b/views/home.ejs
@@ -23,6 +23,12 @@
         <div class="firstdiv">
             <div class="firstinnerdiv">
                 <img src="/images/OpenTalkLogo.png" alt="logo">
+                <div class="optionlist">
+                    <a href="#" class="option"><i class="ri-group-2-line friends"></i></a>
+                    <a href="#" class="option"><i class="ri-user-add-line adduser"></i></a>
+                    <a href="#" class="option"><i class="ri-team-line group"></i></a>
+                    <a href="#" class="option"><i class="ri-earth-line global"></i></a>
+                </div>
                 <button class="logout"><i class="ri-logout-box-line"></i></button>
             </div>
             <div class="secondinnerdiv">
