--- a/public/stylesheets/homeAndGroup.css
+++ b/public/stylesheets/homeAndGroup.css
@@ -41,12 +41,31 @@ body{
 .firstinnerdiv>img{
     max-width:45px;
 }
+.optionlist{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap:20px;
+
+}
+.option{
+    color:#ffffff;
+    font-size:24px;
+    text-decoration: none;
+    transition: 0.3s;
+
+}
+.option:hover{
+    color: #FF6606;  
+}
+
 .logout{
     width:43px;
     height:43px;
     cursor: pointer;
     text-decoration: none;
-    color: #E2E4E9;
+    color: rgb(255, 102, 6);
     display: flex;
     align-items: center;
     justify-content: center;
@@ -174,18 +193,6 @@ body{
     background-size: cover;
 }
 
-.messages{
-    width:18px;
-    height:18px;
-    background-color: rgb(255, 102, 6);
-    border-radius: 50%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color:white;
-    font-size: 12px;
-    
-}
 /* //////////////////////////////////// */
 .seconddiv{
     height:100%;
