--- a/views/group.ejs
+++ b/views/group.ejs
@@ -9,6 +9,10 @@
     <link rel="stylesheet" href="/stylesheets/homeAndGroup.css">
     <link rel="stylesheet" href="/stylesheets/logout.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -23,56 +27,50 @@
         <div class="firstdiv">
             <div class="firstinnerdiv">
                 <img src="/images/OpenTalkLogo.png" alt="logo">
-                <div class="optionlist">
-                    <a href="#" class="option"><i class="ri-group-2-line friends"></i></a>
-                    <a href="#" class="option"><i class="ri-user-add-line adduser"></i></a>
-                    <a href="#" class="option"><i class="ri-team-line group"></i></a>
-                    <a href="#" class="option"><i class="ri-earth-line global"></i></a>
-                </div>
                 <button class="logout"><i class="ri-logout-box-line"></i></button>
             </div>
             <div class="secondinnerdiv">
                 <div class="chatbox">
                     <h1>Chat</h1>
                     <div class="search">
-                        <input type="text" placeholder="Search user">
-                        <i class="ri-user-search-line"></i>
+                        <input type="text" placeholder="Search group">
+                        <i class="fa-solid fa-users"></i>
                     </div>
 
                     <a href=""><i class="ri-search-line"></i></a>
                 </div>
                 <div class="friendlistbox">
-                    <p>FRIENDLIST</p>
+                    <p>GROUPLIST</p>
                     <div class="friendlist">
                         <div class="user1">
                             <div class="userdetails">
                                 <div class="profile"></div>
                                 <div class="description">
-                                    <h3>James Bond</h3>
+                                    <h3>Friends Forever</h3>
                                     <h6>Lorem ipsum dolor sit </h6>
                                 </div>
                             </div>
-                
+                            
                         </div>
                         <div class="user1">
                             <div class="userdetails">
                                 <div class="profile" style="background-image:url('https://picsum.photos/200') ;"></div>
                                 <div class="description">
-                                    <h3>Marcus RashFord</h3>
+                                    <h3>Homies</h3>
                                     <h6>Lorem ipsum dolor sit </h6>
                                 </div>
                             </div>
-        
+                            
                         </div>
                         <div class="user1">
                             <div class="userdetails">
                                 <div class="profile" style="background-image:url('https://picsum.photos/200') ;"></div>
                                 <div class="description">
-                                    <h3>Steve Smith</h3>
+                                    <h3>vazha thottam</h3>
                                     <h6>Lorem ipsum dolor sit </h6>
                                 </div>
                             </div>
-        
+                            
                         </div>
                     </div>
                 </div>
@@ -83,7 +81,7 @@
                 <div class="selecteduser">
                     <div class="selecteduserprofile"></div>
                     <div class="selecteduserdetails">
-                        <h4>Jose Mouringho</h4>
+                        <h4>Friends Forever</h4>
                         <p>Lorem ipsum dolor, sit amet consectetur </p>
                     </div>
 
