--- a/views/group.ejs
+++ b/views/group.ejs
@@ -27,6 +27,12 @@
         <div class="firstdiv">
             <div class="firstinnerdiv">
                 <img src="/images/OpenTalkLogo.png" alt="logo">
+                <div class="optionlist">
+                    <a href="/home" class="option"><i class="ri-group-2-line friends"></i></a>
+                    <a href="#" class="option"><i class="ri-user-add-line adduser"></i></a>
+                    <a href="/group" style="color: rgb(255, 102, 6);" class="option"><i class="ri-team-line group"></i></a>
+                    <a href="#" class="option"><i class="ri-earth-line global"></i></a>
+                </div>
                 <button class="logout"><i class="ri-logout-box-line"></i></button>
             </div>
             <div class="secondinnerdiv">
