--- a/views/home.ejs
+++ b/views/home.ejs
@@ -24,9 +24,9 @@
             <div class="firstinnerdiv">
                 <img src="/images/OpenTalkLogo.png" alt="logo">
                 <div class="optionlist">
-                    <a href="#" class="option"><i class="ri-group-2-line friends"></i></a>
+                    <a href="/home" style="color: rgb(255, 102, 6);" class="option"><i class="ri-group-2-line friends"></i></a>
                     <a href="#" class="option"><i class="ri-user-add-line adduser"></i></a>
-                    <a href="#" class="option"><i class="ri-team-line group"></i></a>
+                    <a href="/group" class="option"><i class="ri-team-line group"></i></a>
                     <a href="#" class="option"><i class="ri-earth-line global"></i></a>
                 </div>
                 <button class="logout"><i class="ri-logout-box-line"></i></button>
