added frontend css

--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -26,7 +26,7 @@
         </div>
     </div>
 
-    <div class="firstdiv">
+    <div class="maindiv">
         <div class="firstinnerdiv">
             <img src="/images/OpenTalkLogo.png" alt="logo">
             <div class="optionlist">
@@ -116,6 +116,6 @@
     </div>
 
 </body>
-<script src="/javascripts/home.js"></script>
+<script src="/javascripts/logout.js"></script>
 
 </html>
