--- a/views/home.ejs
+++ b/views/home.ejs
@@ -106,6 +106,6 @@
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/javascripts/socket.js"></script>
-<script src="/javascripts/home.js"></script>
+<script src="/javascripts/logout.js"></script>
 
 </html>
