--- a/public/stylesheets/addUser.css
+++ b/public/stylesheets/addUser.css
@@ -11,7 +11,7 @@ body{
     
 }
    
-.firstdiv{
+.maindiv{
     height:100%;
     width:100%;
     border-radius: 10px;
@@ -21,7 +21,7 @@ body{
     padding:25px;
 }
 .firstinnerdiv{
-    width:80px;
+    min-width:80px;
     height:100%;
     background-color: rgb(0, 0, 0);
     border-radius: 10px;
@@ -37,9 +37,10 @@ body{
 .optionlist{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap:20px;
+    min-height: 195px;
 
 }
 .option{
@@ -58,12 +59,12 @@ body{
     height:43px;
     cursor: pointer;
     text-decoration: none;
-    color: rgb(255, 102, 6);
+    color: #FF6606;
     display: flex;
     align-items: center;
     justify-content: center;
     font-size:30px;
-    background-color: #000000;
+    background-color: transparent;
     border: none;
 }
 .secondinnerdiv{
