--- a/public/stylesheets/homeAndGroup.css
+++ b/public/stylesheets/homeAndGroup.css
@@ -28,7 +28,7 @@ body{
     gap:5px;
 }
 .firstinnerdiv{
-    width:80px;
+    min-width:80px;
     height:100%;
     background-color: rgb(0, 0, 0);
     border-radius: 10px;
@@ -44,10 +44,10 @@ body{
 .optionlist{
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     gap:20px;
-
+    min-height: 195px;
 }
 .option{
     color:#ffffff;
