--- a/views/global.ejs
+++ b/views/global.ejs
@@ -6,9 +6,17 @@
     <title>OpenTalk</title>
     <link rel="icon" href="/images/OpenTalkLogo.png">
     <link rel="stylesheet" href="/stylesheets/global.css">
+    <link rel="stylesheet" href="/stylesheets/logout.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 </head>
 <body>
+    <div class="logoutContainer">
+        <h1>Log out <i class="ri-logout-box-r-line"></i></h1>
+        <p>Are you sure you want to log out ?</p>
+        <div class="logoutButtonContainer">
+            <button class="button1">OK</button><button class="button2">CANCEL</button>
+        </div>
+    </div>
     <div class="maindiv">
         <div class="firstdiv">
             <div class="firstinnerdiv">
@@ -93,4 +101,5 @@
         </div>
     </div>
 </body>
+<script src="/javascripts/logout.js"></script>
 </html>
