--- a/views/group.ejs
+++ b/views/group.ejs
@@ -110,6 +110,6 @@
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/javascripts/socket.js"></script>
-<script src="/javascripts/home.js"></script>
+<script src="/javascripts/logout.js"></script>
 
 </html>
