--- a/views/home.ejs
+++ b/views/home.ejs
@@ -44,36 +44,19 @@
                 <div class="friendlistbox">
                     <p>FRIENDLIST</p>
                     <div class="friendlist">
-                        <div class="user1">
-                            <div class="userdetails">
-                                <div class="profile"></div>
-                                <div class="description">
-                                    <h3>James Bond</h3>
-                                    <h6>Lorem ipsum dolor sit </h6>
+
+                        <% for (let friend of friendDetailsList){%>
+                            <div class="user1">
+                                <div class="userdetails">
+                                    <div class="profile"></div>
+                                    <div class="description">
+                                        <h3><%=friend.fullname%></h3>
+                                        <h6><%=friend.username%></h6>
+                                    </div>
                                 </div>
                             </div>
-                
-                        </div>
-                        <div class="user1">
-                            <div class="userdetails">
-                                <div class="profile" style="background-image:url('https://picsum.photos/200') ;"></div>
-                                <div class="description">
-                                    <h3>Marcus RashFord</h3>
-                                    <h6>Lorem ipsum dolor sit </h6>
-                                </div>
-                            </div>
-        
-                        </div>
-                        <div class="user1">
-                            <div class="userdetails">
-                                <div class="profile" style="background-image:url('https://picsum.photos/200') ;"></div>
-                                <div class="description">
-                                    <h3>Steve Smith</h3>
-                                    <h6>Lorem ipsum dolor sit </h6>
-                                </div>
-                            </div>
-        
-                        </div>
+                        <% } %>
+
                     </div>
                 </div>
             </div>
@@ -94,18 +77,19 @@
             <div class="fourthinnerdiv">
                 <div id="messagediv">
                 </div>
-                
-                    <form id="form" action="">
-                        <textarea id="input"  placeholder="Enter your Message"></textarea>
-                        <button type="submit"><i class="ri-arrow-right-up-line"></i></button>
-                    </form>
+
+                <form id="form" action="">
+                    <textarea id="input" placeholder="Enter your Message"></textarea>
+                    <button type="submit"><i class="ri-arrow-right-up-line"></i></button>
+                </form>
             </div>
-            
+
         </div>
     </div>
 </body>
 <script src="/socket.io/socket.io.js"></script>
 <script src="/javascripts/socket.js"></script>
 <script src="/javascripts/logout.js"></script>
+<script src="/javascripts/home.js"></script>
 
 </html>
