--- a/views/addUser.ejs
+++ b/views/addUser.ejs
@@ -10,6 +10,11 @@
     <link rel="stylesheet" href="/stylesheets/logout.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
 
+    <!-- Font Awsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -51,7 +56,7 @@
                 <ul class="existingUserGroup">
                     <% for (let user of existingUsers){%>
                         <li class="existingUser">
-                            <div class="profile"></div>
+                            <div class="profile"><i class="fa-solid fa-user"></i></div>
                             <div class="description">
                                 <h5>
                                     <%= user.fullname%>
