--- a/views/home.ejs
+++ b/views/home.ejs
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="/stylesheets/homeAndGroup.css">
     <link rel="stylesheet" href="/stylesheets/logout.css">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@4.2.0/fonts/remixicon.css" rel="stylesheet" />
+
+    <!-- Font Awsome -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -50,7 +55,7 @@
                         <% for (let friend of friendDetailsList){%>
                             <div class="user1">
                                 <div class="userdetails">
-                                    <div class="profile"></div>
+                                    <div class="profile"><i class="fa-solid fa-user"></i></div>
                                     <div class="description">
                                         <h3>
                                             <%=friend.fullname%>
