--- a/views/home.ejs
+++ b/views/home.ejs
@@ -72,13 +72,17 @@
                 </div>
             </div>
         </div>
-        <div class="seconddiv">
+        <div class="emptySecondDiv">
+            <img src="/images/hiddenLogo.png">
+            <h3>Welcome To OpenTalk</h3>
+        </div>
+        <div class="seconddiv hide">
             <div class="thirdinnerdiv">
                 <div class="selecteduser">
                     <div class="selecteduserprofile"></div>
                     <div class="selecteduserdetails">
-                        <h4>Jose Mouringho</h4>
-                        <p>Lorem ipsum dolor, sit amet consectetur </p>
+                        <h4></h4>
+                        <p></p>
                     </div>
 
                 </div>
